# freecad_thread_workbench

./: CHANGELOG.md  Init.py  InitGui.py  README.md  package.xml  pyproject.toml  thread_builder.py  thread_commands.py  thread_dialog.py  thread_presets.py  thread_preview.py  thread_ui.py
freecad/ThreadWorkbench/: __init__.py  init_gui.py  thread_commands.py  thread_dialog.py  thread_presets.py  translations.py
freecad/ThreadWorkbench/geometry/: __init__.py  builder.py  face_analysis.py  frame.py  helix.py  precut.py  thread_frame.py
freecad/ThreadWorkbench/geometry/preview/: helix_line.py  overlay.py  profile_line.py  surface.py
freecad/ThreadWorkbench/geometry/runout/: __init__.py  pocket.py  tapered.py
freecad/ThreadWorkbench/threads/: __init__.py  base.py  registry.py
freecad/ThreadWorkbench/ui/: __init__.py  creation.py  handlers.py  layout.py  presets.py  preview.py  runout.py  scanning.py  thread_ui.py  widgets.py
geometry/: __init__.py  builder.py  face_analysis.py
geometry/preview/: __init__.py  profile_line.py
geometry/runout/: __init__.py  pocket.py  undercut.py
profiles/: __init__.py  asme_b11.py  base.py  iso68_1.py
profiles/presets/: __init__.py  base.py  inch.py  metric.py
threads/: __init__.py
threads/asme_b11/: __init__.py  presets.py  profile.py
threads/iso68_1/: __init__.py  presets.py  profile.py
translations/: ThreadWorkbench_en.qm  ThreadWorkbench_en.ts  ThreadWorkbench_ru.qm  ThreadWorkbench_ru.ts
ui/: __init__.py  creation.py  handlers.py  layout.py  presets.py  scanning.py  selection.py  thread_ui.py  widgets.py
(+10 files in other folders)
